--- a/src/app/auth/auth.scss
+++ b/src/app/auth/auth.scss
@@ -1,4 +1,21 @@
 :host {
+  height: 100%;
+  width: 100%;
+  display: block;
    /deep/  {
+    app-signin {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .btn-primary {
+        width: 100%;
+      }
+      // .btn-secondary {
+    }
   }
 }
+
+
